Upgrade rm-case-service to java 17 (#258)
* Inital commit of java 17 upgrade

* Have updated the support files and the object converter

* Further fixes and updates

* Added removed semi colon

* Code updates so far

* Updated Java 17 message in main.yml

* Fixed last failing test and reorganised ObjectConverter

* Have removed redundant class and references

* Further tidy of code

* Have removed test object converter class for the case and moved it into the CaseServiceTest as it is only used there. Have also tidied up the pom